Deployment modifications. Fixed firefox "mixed content" warning/block over Google Fonts inclusion. Fixed bg color to make scrollbars look better in Chrome.

--- a/homework/cheepr/public/stylesheets/mycss.css
+++ b/homework/cheepr/public/stylesheets/mycss.css
@@ -57,7 +57,6 @@ div#feed {
   width: 75%;
   overflow-y:scroll;
   height: 100%;
-  background: red;
   float: left;
 }
 div#users {
